# easevoice-trainer

./: .gitignore  MAINTAINERS  README.md  README.zh-CN.md  hello.py  pyproject.toml  requirements.txt
configs/: tts_infer.yaml
examples/: train_with_tensorboard.py
models/pretrained/: .gitkeep
scripts/: Dockerfile  start.sh
src/: main.py
src/api/: api.py
src/audiokit/: __init__.py
src/audiokit/asr/: __init__.py  asr.py
src/audiokit/denoise/: __init__.py  denoise.py
src/audiokit/refinement/: __init__.py  refinement.py
src/audiokit/slicer/: __init__.py  slicer.py
src/audiokit/uvr5/: separate.py
src/audiokit/uvr5/lib_v5/vr_network/: __init__.py  attend.py  dataset.py  layers.py  layers_123812KB.py  layers_33966KB.py  layers_new.py  mdxnet.py  mel_band_roformer.py  nets.py  nets_123812KB.py  nets_33966KB.py  nets_537238KB.py  nets_new.py  spec_utils.py
src/cmd/: audio_asr.py  audio_denoise.py  audio_slicer.py  audio_uvr5.py  easy_mode.py  normalize.py  train_gpt.py  train_sovits.py
src/easevoice/: __init__.py  config.py
src/easevoice/feature_extractor/: cnhubert.py
src/easevoice/inference/: __init__.py  preprocessor.py  segmentation.py  text_preprocessor.py  text_segmentation.py  tts.py
src/easevoice/module/: attentions.py  attentions_onnx.py  commons.py  core_vq.py  data_utils.py  models.py  models_onnx.py  modules.py  mrte_model.py  quantize.py
src/easevoice/soundstorm/auto_reg/data/: bucket_sampler.py  data_module.py  dataset.py
src/easevoice/soundstorm/auto_reg/models/: t2s_lightning_module.py  t2s_lightning_module_onnx.py  t2s_model.py  t2s_model_onnx.py  utils.py
src/easevoice/soundstorm/auto_reg/modules/: activation.py  activation_onnx.py  embedding.py  embedding_onnx.py  lr_schedulers.py  optim.py  patched_mha_with_cache.py  patched_mha_with_cache_onnx.py  scaling.py  transformer.py  transformer_onnx.py
src/easevoice/text/: __init__.py  cantonese.py  chinese.py  cleaner.py  english.py  japanese.py  korean.py  symbols.py  tone_sandhi.py
src/easevoice/text/chinese_norm/: chronology.py  constants.py  num.py  phonecode.py  quantifier.py  text_normlization.py
src/easevoice/text/data/chinese/: .gitignore
src/easevoice/text/g2pw/: dataset.py  g2pw.py  onnx_api.py  utils.py
src/logger/: __init__.py
src/normalization/: normalize.py
src/rest/: rest.py  types.py
src/service/: __init__.py  audio.py  file.py  namespace.py  normalize.py  session.py  task.py  tensorboard.py  train.py  voice.py
src/train/: gpt.py  helper.py  sovits.py
src/utils/audio/: __init__.py
src/utils/config/: __init__.py  config.py
src/utils/helper/: __init__.py  connector.py
src/utils/path/: __init__.py  ckpt.py  path.py
src/utils/response/: __init__.py
tests/: __init__.py  normalize_test.py  train_test.py  uvr5_test.py
tests/easevoice/: text_test.py  tts_test.py
whl/: LangSegment-0.3.5-py3-none-any.whl
