[project]
name = "easevoice-trainer"
version = "0.1.0"
description = "EaseVoice Trainer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "audioread==3.0.0",
    "beartype==0.14.1",
    "einops==0.6.0",
    "fastapi>=0.115.6",
    "librosa==0.9.2",
    "numpy==1.23.5",
    "pyrubberband==0.3.0",
    "pysoundfile==0.9.0.post1 ; sys_platform == 'darwin'",
    "pytorch-lightning==2.0.0",
    "rotary-embedding-torch==0.3.5",
    "scipy==1.9.3",
    "six>=1.17.0",
    "soundfile==0.11.0 ; sys_platform != 'darwin'",
    "torch>=2.2.2",
    "tqdm>=4.67.1",
]
