[project]
name = "easevoice-trainer"
version = "0.1.0"
description = "EaseVoice Trainer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "audioread==3.0.0",
    "beartype==0.14.1",
    "einops==0.6.0",
    "fastapi>=0.115.6",
    "librosa==0.9.2",
    "numpy==1.23.5",
    "pyrubberband==0.3.0",
    "pysoundfile==0.9.0.post1 ; sys_platform == 'darwin'",
    "pytorch-lightning",
    "rotary-embedding-torch==0.3.5",
    "scipy==1.9.3",
    "six>=1.17.0",
    "soundfile>=0.11.0",
    "torch>=2.1.1",
    "tqdm>=4.67.1",
    "transformers",
    "ffmpeg-python",
    "uvicorn>=0.34.0",
    "LangSegment>=0.2.0",
    "pypinyin",
    "jieba_fast",
    "onnxruntime==1.17.1",
    "torchmetrics==1.6.0",
    "opencc",
    "pyopenjtalk>=0.3.4",
    "nltk",
    "wordsegment",
    "g2p_en",
    "jamo",
    "ko_pron",
    "g2pk2",
    "pyjyutping",
    "cn2an",
    "python-mecab-ko",
    "matplotlib",
    "ctranslate2==4.1.0",
    "Faster_Whisper",
    "funasr==1.0.27",
    "torchaudio==2.1.1",
    "pandas",
    "tensorboard",
    "psutil>=6.1.1",
    "pynvml",
    "modelscope>=1.10.0",
    "addict",
    "httpx>=0.28.1",
    "tensorflow>=2.15.0",
    "socksio>=1.0.0",
    "logger",
    "datasets>=2.15.0",
    "simplejson",
    "sortedcontainers",
]
